# Mycelica

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CURRENT_STATE.md  LICENSE  MYCELICA_CODE_INTELLIGENCE_PLAN.md  Makefile  README.md  TODO.md  index.html  leaf-view-system-design.md  mycelica-testing-preview.db  package-lock.json  package.json  tauri.team.conf.json
.claude/: settings.local.json
.claude/agents/: coder.md  hypha.md  summarizer.md  verifier.md
.claude/skills/mycelica-conventions/: SKILL.md
backend/: auto_generate_universe.py  create_universe_categories.py  insert_cluster_names.py  requirements.txt
backend/app/: __init__.py  ai_client.py  analysis.py  data_service.py  database.py  db.py  main.py  models.py  parser.py  reload.py
docs/: ALGORITHMS.md  ARCHITECTURE.md  CERTAINTY_SCORING_PLAN.md  CLI.md  VISION.md  final-security-tasks.md  holerabbit-extension-server-auth.md  security-investigation-prompt.md  security-remaining-fixes.md  security-session-transcript.md
docs/specs/: AI_CLUSTERING.md  COMMANDS.md  HIERARCHY.md  MULTI_PATH.md  PRIVACY.md  SCHEMA.md  TYPES.md
docs/spore/: BRANCH-AUDIT.md  CLI-REFERENCE.md  CURRENT-STATE.md  DOC.md  GO-PORT-PHASE2.md  GO-PORT-PHASE3-PLAN.md  GO-PORT-PHASE4-PLAN.md  ORCHESTRATOR-OVERVIEW.md  PIPELINE.md  PLAN.md  SPORE_ANALYZER_PLAN.md  SPORE_CONCERNS.md  SPORE_GO_SEPARATION.md  concern-16-guide-architecture.md  cookbook-spore-symbiosis.md  graph-as-memory.md  security-as-hygiene.md
docs/spore/agents/: README.md  coder.md  mcp-summarizer.json  mcp-verifier.json  operator.md  summarizer.md  verifier.md
docs/spore/tasks/: task-0ed5dabd.md  task-4bcabc0f.md  task-c627111c.md  task-e0ca85f5.md
exports/extracted/: memories.json  projects.json  users.json
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  emojiMatcher.ts
scripts/: create-member-key.sh  deploy-server.sh  import_conversations.py  import_test_data.py
spore/: go.mod  main.go
spore/cmd/: analyze.go  context.go  loop.go  orchestrate.go  retry.go  retry_test.go  root.go
spore/internal/db/: context.go  context_test.go  db.go  edges.go  embeddings.go  embeddings_test.go  models.go  nodes.go  search.go  search_test.go  writes.go  writes_test.go
spore/internal/graph/: bridges.go  graph_test.go  health.go  similarity.go  similarity_test.go  snapshot.go  snapshot_db.go  staleness.go  topology.go  unionfind.go
spore/internal/orchestrate/: claude.go  claude_test.go  git.go  git_test.go  loop.go  loop_test.go  orchestrate.go  orchestrate_test.go  taskfile.go  taskfile_test.go  types.go  util.go  util_test.go  verdict.go  verdict_test.go
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: mycelica-testing-preview.db
src-tauri/src/: ai_client.rs  app_state.rs  classification.rs  clustering.rs  dendrogram.rs  format_abstract.rs  graph_analysis.rs  hierarchy.rs  holerabbit.rs  http_server.rs  import.rs  lib.rs  local_embeddings.rs  main.rs  mcp.rs  openaire.rs  rebuild.rs  remote_client.rs  settings.rs  signal.rs  similarity.rs  tags.rs  team.rs  utils.rs
src-tauri/src/code/: c_parser.rs  mod.rs  python_parser.rs  rust_parser.rs  ts_parser.rs  types.rs
src-tauri/src/commands/: graph.rs  mod.rs  privacy.rs  settings.rs  team.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
src-tauri/src/papers/: arxiv.rs  core_api.rs  mod.rs  pdf_extractor.rs  pmc.rs  resolver.rs  section_parser.rs  unpaywall.rs
src-team/: App.css  App.tsx  index.html  package-lock.json  package.json  types.ts  vite.config.ts
src-team/components/: Breadcrumb.tsx  ConversationRenderer.tsx  EdgeCreator.tsx  GraphView.tsx  LeafView.tsx  NodePopup.tsx  OrphanPanel.tsx  QuickAdd.tsx  RecentPanel.tsx  Settings.tsx  SignalConversationRenderer.tsx  Toolbar.tsx
src-team/stores/: teamStore.ts
src/components/: ErrorBoundary.tsx
src/components/graph/: Canvas.tsx  DevConsole.tsx  Graph.tsx  GraphCanvas.tsx  GraphStatusBar.tsx  NodeContextMenu.tsx  NoteModal.tsx  SimilarNodesPanel.tsx
src/components/leaf/: ConversationRenderer.tsx  LeafSimilarNodes.tsx  LeafView.tsx  PaperViewer.tsx  SupportingItemsPanel.tsx
src/components/sessions/: SessionsPanel.tsx
src/components/settings/: ConfirmDialog.tsx  SettingsPanel.tsx
src/components/sidebar/: Sidebar.tsx
src/hooks/: useGraph.ts
src/stores/: graphStore.ts
src/types/: graph.ts
src/utils/: emojiMatcher.ts  nodeColors.ts  similarityColor.ts
