[package]
name = "mycelica"
version = "0.10.0"
description = "A visual knowledge graph for AI conversations"
authors = ["Ekats"]
edition = "2021"
default-run = "mycelica"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mycelica_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# cuda feature: for CUDA <= 12.x with stable Rust
# for CUDA 13.x, see patch section at end of file
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
team = ["dep:scraper", "dep:ammonia"]  # Team client GUI mode
signal = ["rusqlite/bundled-sqlcipher-vendored-openssl"]  # Signal Desktop encrypted DB import
mcp = ["dep:rmcp", "dep:schemars"]  # MCP server for agent coordination

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "net", "time", "signal"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking", "stream"], default-features = false }
sha2 = "0.10"
hex = "0.4"
html-escape = "0.2"
zip = "2"
rand = "0.8"
urlencoding = "2"
regex = "1"
flate2 = "1"
url = "2"
dirs = "5"
tiny_http = "0.12"
instant-distance = { version = "0.6.1", features = ["serde", "serde-big-array"] }
bincode = "1.3"

# CLI dependencies
clap = { version = "4", features = ["derive"] }
libc = "0.2"
clap_complete = "4"
ratatui = "0.26"
crossterm = "0.27"
tui-tree-widget = "0.19"
nucleo = "0.5"
arboard = "3"

# Local embeddings via candle
# Current: git main (requires nightly Rust, supports CUDA 13.x)
# For stable Rust (CPU only or CUDA ≤12.x): use version = "0.8" instead
candle-core = { git = "https://github.com/huggingface/candle" }
candle-nn = { git = "https://github.com/huggingface/candle" }
candle-transformers = { git = "https://github.com/huggingface/candle" }
tokenizers = "0.20"
hf-hub = "0.4"

# Code parsing
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
ignore = "0.4"

# Multi-language parsing via tree-sitter
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-c = "0.23"

# PDF text extraction
pdf-extract = "0.7"

# HTML readability + sanitization (team mode URL fetching)
scraper = { version = "0.22", optional = true }
ammonia = { version = "4", optional = true }

# MCP server (agent coordination via Model Context Protocol)
rmcp = { version = "0.15", features = ["server", "transport-io", "schemars"], optional = true }
schemars = { version = "1", optional = true }

# HTTP API server (team mode)
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "limit"] }
governor = "0.8"

[dev-dependencies]
tempfile = "3"

# Optimize heavy numerical packages even in dev mode (10-100x faster inference)
[profile.dev.package.candle-core]
opt-level = 3
[profile.dev.package.candle-nn]
opt-level = 3
[profile.dev.package.candle-transformers]
opt-level = 3
[profile.dev.package.tokenizers]
opt-level = 3
[profile.dev.package.safetensors]
opt-level = 3
[profile.dev.package.gemm]
opt-level = 3
[profile.dev.package.gemm-common]
opt-level = 3
[profile.dev.package.gemm-f32]
opt-level = 3
[profile.dev.package.instant-distance]
opt-level = 3

[[bin]]
name = "batch_import"
path = "src/bin/batch_import.rs"

[[bin]]
name = "mycelica-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "mycelica"
path = "src/main.rs"

[[bin]]
name = "mycelica-team"
path = "src/main.rs"
required-features = ["team"]

[[bin]]
name = "mycelica-server"
path = "src/bin/server.rs"

[package.metadata.deb]
name = "mycelica-server"
maintainer = "Ekats"
copyright = "2024-2026 Ekats"
depends = "$auto, libssl3"
section = "net"
priority = "optional"
assets = [
    ["target/release/mycelica-server", "usr/bin/", "755"],
]

# =============================================================================
# Build Instructions
# =============================================================================
# With git candle (current config, requires nightly):
#   CPU:        cargo +nightly build --release
#   CUDA 13.x:  cargo +nightly build --release --features cuda
#
# For stable Rust, change candle deps above to version = "0.8":
#   CPU:        cargo build --release
#   CUDA ≤12.x: cargo build --release --features cuda
