[package]
name = "mycelica"
version = "0.10.0"
description = "A visual knowledge graph for AI conversations"
authors = ["Ekats"]
edition = "2021"
rust-version = "1.88"
default-run = "mycelica"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mycelica_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
gui = ["dep:tauri", "dep:tauri-plugin-opener", "dep:tauri-plugin-dialog", "dep:tauri-plugin-fs", "dep:tauri-plugin-shell", "dep:tauri-build"]
team = ["dep:scraper", "dep:ammonia"]  # Team client GUI mode
signal = ["rusqlite/bundled-sqlcipher-vendored-openssl"]  # Signal Desktop encrypted DB import
mcp = ["dep:rmcp", "dep:schemars"]  # MCP server for agent coordination

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }
tauri-plugin-fs = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "net", "time", "signal"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking", "stream"], default-features = false }
sha2 = "0.10"
hex = "0.4"
html-escape = "0.2"
zip = "2"
rand = "0.8"
urlencoding = "2"
regex = "1"
flate2 = "1"
url = "2"
dirs = "5"
tiny_http = "0.12"
instant-distance = { version = "0.6.1", features = ["serde", "serde-big-array"] }
bincode = "1.3"

# CLI dependencies
clap = { version = "4", features = ["derive"] }
libc = "0.2"
clap_complete = "4"
ratatui = "0.26"
crossterm = "0.27"
tui-tree-widget = "0.19"
nucleo = "0.5"
arboard = "3"

# Local embeddings via candle (CPU only, stable Rust)
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = { version = "0.22", default-features = false, features = ["progressbar", "fancy-regex"] }
hf-hub = { version = "0.4", default-features = false, features = ["tokio", "ureq", "rustls-tls"] }

# Code parsing
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
ignore = "0.4"

# Multi-language parsing via tree-sitter
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-c = "0.23"

# PDF text extraction
pdf-extract = "0.7"

# HTML readability + sanitization (team mode URL fetching)
scraper = { version = "0.22", optional = true }
ammonia = { version = "4", optional = true }

# MCP server (agent coordination via Model Context Protocol)
rmcp = { version = "0.15", features = ["server", "transport-io", "schemars"], optional = true }
schemars = { version = "1", optional = true }

# HTTP API server (team mode)
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "limit"] }
governor = "0.8"

[dev-dependencies]
tempfile = "3"

# Optimize heavy numerical packages even in dev mode (10-100x faster inference)
[profile.dev.package.candle-core]
opt-level = 3
[profile.dev.package.candle-nn]
opt-level = 3
[profile.dev.package.candle-transformers]
opt-level = 3
[profile.dev.package.tokenizers]
opt-level = 3
[profile.dev.package.safetensors]
opt-level = 3
[profile.dev.package.gemm]
opt-level = 3
[profile.dev.package.gemm-common]
opt-level = 3
[profile.dev.package.gemm-f32]
opt-level = 3
[profile.dev.package.instant-distance]
opt-level = 3

[[bin]]
name = "batch_import"
path = "src/bin/batch_import.rs"

[[bin]]
name = "mycelica-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "mycelica"
path = "src/main.rs"
required-features = ["gui"]

[[bin]]
name = "mycelica-team"
path = "src/bin/team_main.rs"
required-features = ["gui", "team"]

[[bin]]
name = "mycelica-server"
path = "src/bin/server.rs"

[package.metadata.deb]
name = "mycelica-server"
maintainer = "Ekats"
copyright = "2024-2026 Ekats"
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/mycelica-server", "usr/bin/", "755"],
]

# =============================================================================
# Build Instructions
# =============================================================================
#   CPU:  cargo build --release
#   CLI:  cargo install --path . --bin mycelica-cli --features mcp --force
#   musl: cargo build --release --target x86_64-unknown-linux-musl --bin mycelica-cli --features mcp
